<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="@dimen/y100">

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:enabled="false"
            android:id="@+id/id_debug_checkbox_door"
            android:text="@string/debug_door_switch"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:enabled="false"
            android:id="@+id/id_debug_checkbox_fridge_close"
            android:text="@string/debug_fridge_close"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:enabled="false"
            android:id="@+id/id_debug_checkbox_fridge_open"
            android:text="@string/debug_fridge_open"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:enabled="false"
            android:id="@+id/id_debug_checkbox_pick_motor"
            android:text="@string/debug_pick_motor"/>

        <CheckBox
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="14sp"
            android:enabled="false"
            android:id="@+id/id_debug_checkbox_compressor"
            android:text="@string/debug_compressor"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            android:text="磁编码器1位置:234"
            android:id="@+id/id_debug_text_view_position_1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@android:color/holo_blue_light"
            android:text="磁编码器2位置:234"
            android:id="@+id/id_debug_text_view_position_2"
            />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:gravity="center"
        android:text="冰箱温度:25℃"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:id="@+id/id_debug_text_view_temperature"
        />

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x20"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="冰箱门电机速度"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_fridge_speed"
                android:textColor="@android:color/holo_orange_light"
                android:text="45"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="超时时间"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_fridge_time_out"
                android:textColor="@android:color/holo_orange_light"
                android:text="10000"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x20"
            android:text="打开冰箱门"
            android:textSize="12sp"
            android:id="@+id/id_debug_button_fridge_open"
            android:textColor="@android:color/white"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x20"
            android:layout_marginEnd="@dimen/x20"
            android:text="关闭冰箱门"
            android:textSize="12sp"
            android:id="@+id/id_debug_button_fridge_close"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x10"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="升降电机速度"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_pick_motor_speed"
                android:textColor="@android:color/holo_orange_light"
                android:text="30"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="编码器步数"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_pick_motor_steps"
                android:textColor="@android:color/holo_orange_light"
                android:text="518"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="超时时间"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_pick_motor_time_out"
                android:textColor="@android:color/holo_orange_light"
                android:text="10000"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x10"
            android:text="上升"
            android:textSize="16sp"
            android:id="@+id/id_debug_button_pick_motor_up"
            android:textColor="@android:color/white"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x10"
            android:layout_marginEnd="@dimen/x10"
            android:text="下降"
            android:textSize="16sp"
            android:id="@+id/id_debug_button_pick_motor_down"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x10"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="磁编码器1"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_position_1"
                android:textColor="@android:color/holo_orange_light"
                android:text="518"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="磁编码器2"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_position_2"
                android:textColor="@android:color/holo_orange_light"
                android:text="500"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="超时时间"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_position_time_out"
                android:textColor="@android:color/holo_orange_light"
                android:text="10000"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x10"
            android:text="确定"
            android:textSize="16sp"
            android:id="@+id/id_debug_button_robot_arm_setting"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x10"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="行"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_row"
                android:textColor="@android:color/holo_orange_light"
                android:text="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="列"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_col"
                android:textColor="@android:color/holo_orange_light"
                android:text="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="超时时间"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_deliver_time_out"
                android:textColor="@android:color/holo_orange_light"
                android:text="10000"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x10"
            android:text="出货"
            android:textSize="16sp"
            android:id="@+id/id_debug_button_deliver"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/x50"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y120"
        android:orientation="horizontal"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/x10"
            app:hintEnabled="true"
            app:hintAnimationEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="超时时间"
                android:background="@null"
                android:textSize="14sp"
                android:gravity="center"
                android:inputType="number"
                android:id="@+id/id_debug_edit_text_init_time_out"
                android:textColor="@android:color/holo_orange_light"
                android:text="10000"
                />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:layout_marginStart="@dimen/x10"
            android:text="初始化"
            android:textSize="16sp"
            android:id="@+id/id_debug_button_init"
            android:textColor="@android:color/white"
            />

    </LinearLayout>

</LinearLayout>